# myNotes

./: .gitignore  CNAME  LICENSE  README.md
docs/: 4_divide_and_conquer.md  GCC_CMAKE.md  apue.md  computer_network.md  data_structure.md  database.md  design_pattern.md  dynamic_programming.md  graph.md  graphviz_binary_tree_visual.md  hash_table.md  hello_cmake.md  linux.md  operating_system.md  permutation_and_combination.md  sequential_container.md  software_architecture_patterns.md  sort_algorithm.md  tasks.md  unordered_map.md  wife's_knowledge.md
interviews/: ByteDance.md  high_questions.md  server.md  tecent.md
interviews_record/my_experience/: ByteDance.md
interviews_record/references/: Baidu.md  high_questions.md  server.md
prepare/algorithm/: divide_and_conquer.md  greedy.md  p_np.md  permutation_and_combination.md  probabilistic_analysis_and_randomized_algorithms.md  sort_algorithm.md  string.md
prepare/backend_development/: consistent_hash.md  cookie_session_jwt.md  microservice.md  rocketmq.md  software_architecture_patterns.md  zookeeper.md
prepare/compile/: LLVM.md
prepare/computer_graphics/: anasys.md  as_rigid_as_possible.md  laplacian_surface_editing.md
prepare/computer_network/: VLAN_VxLAN.md  common_protocols.md  computer_network.md  http_https.md  ip.md  muduo.md  namp.md  network_model.md  ping.md  select_poll_epoll.md  socket.md  tcp_udp.md  unix_io_model.md  url.md
prepare/computer_system/: GCC_CMAKE.md  apue.md  break.md  core_dump.md  cpu_modes.md  dead_lock.md  fork_exec_clone.md  ipc.md  linux.md  lock.md  operating_system.md  process_thread_coroutine.md  signal.md  thread_sync.md  thundering_herd.md  unix_io.md  unix_io_model.md  virtual_memory.md
prepare/cpp/: RAII.md  cin_cout.md  common_questions.md  container.md  cpp11.md  deep_in_class.md  malloc_and_new.md  sequential_container.md  smart_pointer.md  stl.md  storage_duration.md  string.md  thread_local.md  thread_pool.md  virtual_table.md
sources/: sources.pro
sources/Leetcodes/: CMakeLists.txt
sources/Leetcodes/leetcode/: test.py
sources/Leetcodes/leetcode/10_regular_expreesion_matching/: main.cpp
sources/Leetcodes/leetcode/17_letter_combinations_of_a_phone_number/: main.cpp
sources/Leetcodes/leetcode/19_remove_nth_node_from_end_of_list/: main.cpp
sources/Leetcodes/leetcode/1_two_sum/: main.cpp
sources/Leetcodes/leetcode/20_valid_parentheses/: main.cpp
sources/Leetcodes/leetcode/2_add_two_numbers/: main.cpp
sources/Leetcodes/leetcode/35_search_insert_position/: main.cpp
sources/Leetcodes/leetcode/43_multiply_strings/: main.cpp
sources/Leetcodes/leetcode/47_permutations_II/: main.cpp
sources/Leetcodes/leetcode/51_n_queens/: main.cpp
sources/Leetcodes/leetcode/5_longest_palindromic_substring/: main.cpp
sources/Leetcodes/leetcode/61_rotate_list/: main.cpp
sources/Leetcodes/leetcode/62_unique_paths/: main.cpp
sources/Leetcodes/leetcode/66_plus_one/: main.cpp
sources/Leetcodes/leetcode/74_search_a_2d_matrix/: main.cpp
sources/Leetcodes/leetcode/75_sort_colors/: main.cpp
sources/Leetcodes/leetcode/78_subsets/: main.cpp
sources/Leetcodes/leetcode/92_reverse_linked_list_II/: main.cpp
sources/Leetcodes/leetcode/94_binary_tree_inorder_traversal/: main.cpp
sources/Leetcodes/leetcode/9_palindrome_number/: main.cpp
sources/Leetcodes/leetcode/binary_trees/: main.cpp
sources/Leetcodes/src/: 115_distinct_subsequences.cpp  116_populating_next_right_pointers_in_each_node.cpp  117_populating_next_right_pointers_in_each_node_II.cpp  118_pascal_triangle.cpp  119_pascal_triangle_II.cpp  120_triangle.cpp  121_best_time_to_buy_and_sell_stock.cpp  122_best_time_to_buy_and_sell_stock_II.cpp  123_best_time_to_buy_and_sell_stock_III.cpp  125_valid_palindrome.cpp  128_longest_consecutive_sequence.cpp  129_sum_root_to_leaf_numbers.cpp  12_inter_to_roman.cpp  130_surrounded_regions.cpp  131_palindrome_parttioning.cpp  132_palindrome_partitioning_II.cpp  133_clone_graph.cpp  134_gas_satation.cpp  136_single_number.cpp  137_single_number_II.cpp  138_copy_list_with_random_pointer.cpp  141_linked_list_cycle.cpp  142_linked_list_cycle_II.cpp  143_reorder_list.cpp  144_binary_tree_preorder_traversal.cpp  145_binary_tree_postorder_traversal.cpp  146_LRU_cache.cpp  147_insertion_sort_list.cpp  148_sort_list.cpp  149_max_points_on_a_line.cpp  14_longest_common_prefix.cpp  150_evaluate_reverse_polish_notation.cpp  151_reverse_words_in_a_string.cpp  152_maximum_product_subarray.cpp  153_find_minmum_in_rotated_sorted_array.cpp  154_find_minmum_in_rotated_sorted_array_ii.cpp  155_min_stack.cpp  160_intersection_of_two_linked_lists.cpp  162_find_peak_element.cpp  165_compare_version_numbers.cpp  (+78 more)
sources/Linux/apue_execise/: CMakeLists.txt
sources/Linux/apue_execise/apue/libs/: recvfd.cpp  sendfd.cpp  servaccept.cpp  strerror.cpp
sources/Linux/apue_execise/ipc/: CMakeLists.txt  test_popen.cpp
sources/Linux/apue_execise/progress/: fork_twice.cpp  my_atexit.cpp  test_exec.cpp  test_fork.cpp  test_limt.cpp  test_priority.cpp
sources/Linux/apue_execise/signals/: CMakeLists.txt  sigusr.cpp
sources/Linux/apue_execise/threads/: cleanup.cpp  threads_fork.cpp
sources/Linux/gcc_cross/: CMakeLists.txt
sources/Linux/gcc_cross/src/: main.cpp
sources/multithreads/: CMakeLists.txt
sources/multithreads/apue/: CMakeLists.txt
sources/multithreads/apue/libs/: pathalloc.cpp  popen.cpp
sources/multithreads/ipc/: pipe1.cpp
sources/multithreads/progress/: CMakeLists.txt  test_vfork.cpp  test_wait.cpp  with_compete.cpp  with_ipc.cpp
sources/multithreads/socket/: plus_one_client.cpp  plus_one_server.cpp
sources/multithreads/threads/: CMakeLists.txt  badexit2.cpp  thread_create.cpp  thread_exit_status.cpp  timeout.cpp
sources/stl/: CMakeLists.txt
sources/stl/src/: allocates_test.cpp  functional_test.cpp
sources/system_design/schedule/: CMakeLists.txt
sources/system_design/schedule/example/: CMakeLists.txt  scheduleExample.cpp
sources/system_design/schedule/include/: EventLoop.h  schedule.h
sources/system_design/schedule/src/: EventLoop.cpp
(+412 files in other folders)
